--- a/pet_app/Dockerfile
+++ b/pet_app/Dockerfile
@@ -10,4 +10,6 @@ COPY . .
 COPY ./backend/www /pet_app/www
 
 # hostとportを明示的に設定 (0.0.0.0はコンテナ外からのアクセスを許可するために必要)
-CMD ["uvicorn", "backend.backend:app", "--host", "0.0.0.0", "--port", "8000"]
+#上は機械学習モデルを使用する際に使う、下はモデルを使用しない際に使う　使わない方はコメントアウトすること！何が起こるかわからんので
+CMD ["uvicorn", "backend.backendTest:app", "--host", "0.0.0.0", "--port", "8000"]
+#CMD ["uvicorn", "backend.backend:app", "--host", "0.0.0.0", "--port", "8000"]
